--- a/cars/templates/base.html
+++ b/cars/templates/base.html
@@ -44,7 +44,7 @@
                 <!-- nav -->
                 <div class="top-w3pvt d-flex">
                     <div id="logo">
-                        <h1> <a href="{%url 'index'%}"><span class="log-w3pvt">D</span>aves Car Deals</a> <label class="sub-des">Best  Cars Deals</label></h1>
+                        <h1> <a href="{%url 'index'%}"><span class="log-w3pvt">D</span>aves Car Deals</a> <label class="sub-des">Best  Car Deals</label></h1>
                     </div>
 
                     <div class="forms ml-auto">
